--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: mysql
     ports:
       - "127.0.0.1:3306:3306"
-    container_name: "mysql"
+    container_name: "mysql-asayake"
     environment:
       - MYSQL_ROOT_PASSWORD=password
   
